# catan-ai

./: catan-ai.code-workspace
ai/: main.py
ai/ai/: TD3.py  replay_buffer.py
ai/catan-environment/: catan_env.py
ai/catan_environment/: catan_env.py  example_game.json  websocket_interpreter.py
ai/dqn/: dqn.py
catan-game-api/: Cargo.toml  node_edge_mapping.txt  node_tile_mapping.txt
catan-game-api/src/: main.rs
catan-game-api/src/game/: action.rs  bank.rs  board.rs  building.rs  development.rs  edge.rs  game.rs  mod.rs  node.rs  player.rs  port.rs  resource.rs  terrain.rs  tile.rs  trade_offer.rs
catan-game-api/tests/: game_test.rs
db/: docker-compose.yml
