[package]
name = "catan-game-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.212", features = ["derive", "rc"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
